--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">icoder</a>
+    <a class="navbar-brand" href="/">Project</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -33,110 +33,8 @@
           <a class="nav-link" href="#">Contact</a>
         </li>
       </ul>
-      <form method="get" action="/search" class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" name="query" id="query" type="search" placeholder="Search"
-          aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        {% if user.is_authenticated %}
-        <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Welcome: {{request.user}}
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item btn btn-success" role="button" href="/logout/">Logout</a>
-        </div>
-      </li>
-        </ul>
-        {% else %}
-        <!-- Button to trigger SignIn Modal -->
-        <button type="button" class="btn btn-success ml-2" data-toggle="modal" data-target="#signinModal">
-          Login
-        </button>
-        <!-- Button to trigger SignUp Modal -->
-        <button type="button" class="btn btn-success ml-2" data-toggle="modal" data-target="#signupModal">
-          Sign Up
-        </button>
-        {% endif %}
-      </form>
     </div>
   </nav>
-  {% for message in messages %}
-  <div class="alert alert-{{message.tags}} mb-0 alert-dismissible fade show" role="alert">
-    <strong>Message:</strong> {{message}}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  {% endfor %}
-
-  <!-- SignUp Modal -->
-  <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModal" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="signupModalTitle">SignUp Here</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form action="/signup/" method="POST">
-            <div class="form-group">
-              <label for="username">UserName:</label>
-              <input type="text" class="form-control" id="username" name="username"
-                placeholder="Choose a unique Username (Lowercase & alphanumeric)" Required>
-            </div>
-            <div class="form-group">
-              <label for="email">Email Address:</label>
-              <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" Required>
-            </div>
-            <div class="form-group">
-              <label for="pass1">Password:</label>
-              <input type="password" class="form-control" id="pass1" name="password1" placeholder="choose Your Password" Required>
-            </div>
-            <div class="form-group">
-              <label for="pass2">Confirm Password</label>
-              <input type="password" class="form-control" id="pass2" name="password2"
-                placeholder="Enter Your Password Again" Required>
-            </div>
-            {% csrf_token %}
-            <button type="submit" class="btn btn-primary">SignUp</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- logIn Modal -->
-  <div class="modal fade" id="signinModal" tabindex="-1" role="dialog" aria-labelledby="signinModal" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="signinModalTitle">SignIn Here</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form action="/login/" method="POST">
-            <div class="form-group">
-              <label for="username">UserName:</label>
-              <input type="text" class="form-control" id="loginusername" name="loginusername"
-                placeholder="Enter Username" Required>
-            </div>
-            <div class="form-group">
-              <label for="pass1">Enter Password:</label>
-              <input type="password" class="form-control" id="loginpassword" name="loginpassword" placeholder="Enter Your Password" Required>
-            </div>
-            {% csrf_token %}
-            <button type="submit" class="btn btn-primary">SignIn</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-
   {% block body %}
   {% endblock body %}
   <!-- Optional JavaScript -->
