curd Operation done

--- a/templates/allrecord.html
+++ b/templates/allrecord.html
@@ -10,6 +10,9 @@
 <body>
     <div class="container col-9">
         <h1 class="text-center">Book Table</h1>
+        <div class="form-group">
+            <a class="form-control btn btn-primary" href="/">Add new Record</a>
+        </div>
         <table class="table">
             <thead>
                 <tr>
