--- a/templates/updatebook.html
+++ b/templates/updatebook.html
@@ -22,6 +22,11 @@ form.addEventListener('submit', function (e) {
     var description1 = document.getElementById('description').value
 
     var xhttp = new XMLHttpRequest();
+    xhttp.onreadystatechange = function() { 
+        if (xhttp.readyState == 4 && xhttp.status == 200){
+            alert("Record Updated Successfuly")
+            location.replace("/all_books/")
+        }}
     xhttp.open("PUT", "http://127.0.0.1:8000/api/booksbooks/{{bookid}}/", true);
     xhttp.setRequestHeader("Content-type", "application/json");
     data = JSON.stringify({
@@ -30,8 +35,7 @@ form.addEventListener('submit', function (e) {
         description: description1
     })
     xhttp.send(data);
-    alert("Record Updated Successfuly")
-    location.replace("/all_books/")
+    
 })
 
 {% endblock script %}
